Refine backup workflow and documentation